# penguin-dive-game

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  run_all_tests.sh  run_component_test.sh  run_hardware_tests.sh  run_simulator.sh
.claude/: settings.local.json
build_test_display_driver/: CMakeLists.txt
build_test_display_driver/main/: CMakeLists.txt  test_main.c
build_test_game_engine/: CMakeLists.txt
build_test_game_engine/main/: CMakeLists.txt
build_test_penguin_physics/: CMakeLists.txt
build_test_penguin_physics/main/: CMakeLists.txt  test_main.c
build_tests/hardware/: CMakeLists.txt
build_tests/hardware/main/: CMakeLists.txt
components/display_driver/: CMakeLists.txt
components/display_driver/include/: display_driver.h
components/display_driver/src/: display_driver.c  display_driver_m5.cpp
components/display_driver/test/: test_display_driver.c
components/game_engine/: CMakeLists.txt
components/game_engine/include/: game_engine.h
components/game_engine/src/: game_engine.c
components/game_engine/test/: test_game_engine.c
components/ice_pillars/: CMakeLists.txt
components/ice_pillars/include/: ice_pillars.h
components/ice_pillars/src/: ice_pillars.c
components/ice_pillars/test/: test_ice_pillars.c
components/input/: CMakeLists.txt
components/input/include/: input.h
components/input/src/: input_m5.cpp  input_sim.c
components/penguin_physics/: CMakeLists.txt
components/penguin_physics/include/: penguin_physics.h
components/penguin_physics/src/: penguin_physics.c
components/penguin_physics/test/: test_penguin_physics.c
main/: CMakeLists.txt  idf_component.yml  lv_conf.h  main.c  main.cpp
simulator/: CMakeLists.txt  display_driver_sim.c  lv_conf.h  main.c  main.cpp  test_main.c  test_main.cpp
tests/hardware/: test_m5stickc_plus.c
tests/integration/: test_complete_gameplay.c
tests/requirements/: test_game_requirements.c
